# mcts-research-explorer

./: .gitignore  LICENSE  README.md  REFERENCES.md  TOOLS.md  install.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: demo.py
src/mcts_explorer/: __init__.py  explorer.py
src/mcts_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcts_research_explorer/: explorer.py
tests/: test_mcts.py
